--- a/Lesson-1/package.json
+++ b/Lesson-1/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ansi": "^0.3.1"
+    "curly-colors": "^0.1.1",
+    "prompt": "^1.0.0",
+    "random-gen": "^0.1.0"
   }
 }
